--- a/src/assets/style/footer.scss
+++ b/src/assets/style/footer.scss
@@ -6,8 +6,3 @@ footer{
     color: #FFF;
     background: #000;
 }
-@media screen and (max-width: 320px){
-    footer{
-        width:100vw;
-    }
-}
